// RND Screen Generator drawDB DBML source
// Database: PostgreSQL
// Source of truth: docs/development/DATA_MAP.md

Project rnd_screen_generator {
  database_type: 'PostgreSQL'
  Note: '''
    RND Screen Generator MVP data model.
    JSONB internals are intentionally kept at column level for drawDB review.
    Final migration source remains SQL/Supabase migrations.
  '''
}

Table projects {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  name text [not null]
  description text
  created_by uuid
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table screen_sources {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  project_id uuid [not null]
  module_kind text [not null]
  screen_code text [not null]
  name text [not null]
  description text
  route_path text
  implementation_type text
  policy_groups jsonb [not null, default: `'[]'::jsonb`]
  features jsonb [not null, default: `'[]'::jsonb`]
  transitions jsonb [not null, default: `'[]'::jsonb`]
  case_branches jsonb [not null, default: `'[]'::jsonb`]
  source_name text
  source_hash text
  source_json jsonb [not null]
  schema_version text [not null]
  normalized_json jsonb [not null]
  validation_status text [not null]
  validation_warnings jsonb [not null, default: `'[]'::jsonb`]
  author text
  document_version text
  written_at date
  metadata jsonb [not null, default: `'{}'::jsonb`]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (project_id, module_kind, screen_code) [unique, name: 'uq_screen_sources_project_module_code']
    (project_id, module_kind) [name: 'idx_screen_sources_project_module']
    case_branches [type: gin, name: 'idx_screen_sources_case_branches_gin']
    source_json [type: gin, name: 'idx_screen_sources_source_json_gin']
  }

  Note: 'CHECK validation_status in (valid, warning, failed)'
}

Table organism_sources {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  project_id uuid [not null]
  module_kind text [not null]
  organism_source_code text [not null]
  name text [not null]
  description text
  layout text
  visibility_rule text
  visibility_cases jsonb [not null, default: `'[]'::jsonb`]
  components jsonb [not null, default: `'[]'::jsonb`]
  case_branches jsonb [not null, default: `'[]'::jsonb`]
  policies jsonb [not null, default: `'[]'::jsonb`]
  policy_groups jsonb [not null, default: `'[]'::jsonb`]
  features jsonb [not null, default: `'[]'::jsonb`]
  source_name text
  source_hash text
  source_json jsonb [not null]
  schema_version text [not null]
  normalized_json jsonb [not null]
  validation_status text [not null]
  validation_warnings jsonb [not null, default: `'[]'::jsonb`]
  author text
  document_version text
  written_at date
  metadata jsonb [not null, default: `'{}'::jsonb`]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (project_id, module_kind, organism_source_code) [unique, name: 'uq_organism_sources_project_module_code']
    (project_id, module_kind) [name: 'idx_organism_sources_project_module']
    components [type: gin, name: 'idx_organism_sources_components_gin']
    source_json [type: gin, name: 'idx_organism_sources_source_json_gin']
  }

  Note: 'CHECK validation_status in (valid, warning, failed)'
}

Table screen_source_organisms {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  project_id uuid [not null]
  screen_source_id uuid [not null]
  organism_source_id uuid
  module_kind text [not null]
  organism_source_code text [not null]
  section_no text [not null]
  area_type text
  area_description text
  area_layout text
  organism_name text
  organism_description text
  server_controls jsonb [not null, default: `'[]'::jsonb`]
  min_count integer
  max_count integer
  priority integer
  error_handling text
  raw_item jsonb [not null, default: `'{}'::jsonb`]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (screen_source_id, section_no) [unique, name: 'uq_screen_source_organisms_section']
    (screen_source_id, priority) [name: 'idx_screen_source_organisms_screen_priority']
    (screen_source_id, organism_source_code) [name: 'idx_screen_source_organisms_screen_organism_source_code']
    (project_id, module_kind) [name: 'idx_screen_source_organisms_project_module']
  }
}

Table screen_generation_jobs {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  project_id uuid [not null]
  screen_source_id uuid [not null]
  module_kind text [not null]
  status text [not null]
  generation_model text
  review_model text
  generation_execution_mode text
  review_execution_mode text
  generation_session_id text
  review_session_id text
  instruction text
  selected_organism_source_ids uuid[]
  selected_screen_source_organism_ids uuid[]
  latest_set_id uuid
  created_by uuid
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (screen_source_id, created_at) [name: 'idx_screen_generation_jobs_screen']
    (project_id, module_kind, created_at) [name: 'idx_screen_generation_jobs_project_module']
  }

  Note: '''
    CHECK status in (pending, completed, failed)
    CHECK generation_execution_mode is null or in (local_session, remote_api)
    CHECK review_execution_mode is null or in (local_session, remote_api)
  '''
}

Table generated_screen_sets {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  job_id uuid [not null]
  parent_set_id uuid
  version_number integer [not null]
  feedback text
  prompt text [not null]
  prompt_inputs jsonb [not null, default: `'{}'::jsonb`]
  validation_status text [not null]
  validation_errors jsonb [not null, default: `'[]'::jsonb`]
  review_status text
  review_result jsonb
  runtime_diagnostics jsonb
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (job_id, version_number) [unique, name: 'uq_generated_screen_sets_number']
    (job_id, version_number) [name: 'idx_generated_screen_sets_job']
  }

  Note: '''
    CHECK validation_status in (valid, invalid)
    CHECK review_status is null or in (pending, passed, failed, needs_regeneration)
  '''
}

Table generated_screens {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  set_id uuid [not null]
  screen_type text [not null]
  screen_code text [not null]
  source_screen_code text
  source_case_code text
  title text
  trigger text
  difference_from_base text
  follow_up text
  layout_json jsonb [not null, default: `'{}'::jsonb`]
  chrome_json jsonb [not null, default: `'{}'::jsonb`]
  review_status text
  review_result jsonb
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (set_id, screen_code) [unique, name: 'uq_generated_screens_set_code']
    (set_id, screen_type, screen_code) [name: 'idx_generated_screens_set']
    layout_json [type: gin, name: 'idx_generated_screens_layout_json_gin']
    chrome_json [type: gin, name: 'idx_generated_screens_chrome_json_gin']
  }

  Note: '''
    CHECK screen_type in (base, variant)
    CHECK review_status is null or in (pending, passed, failed, needs_regeneration)
  '''
}

Table generated_organisms {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  generated_screen_id uuid [not null]
  screen_source_organism_id uuid
  organism_source_id uuid
  organism_source_code text [not null]
  section_no text [not null]
  area_type text
  title text
  layout_json jsonb [not null, default: `'{}'::jsonb`]
  components_json jsonb [not null, default: `'[]'::jsonb`]
  edited_json jsonb
  edit_status text [not null, default: 'none']
  review_status text
  review_result jsonb
  sort_order integer [not null, default: 0]
  metadata jsonb [not null, default: `'{}'::jsonb`]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (generated_screen_id, section_no) [unique, name: 'uq_generated_organisms_screen_section']
    (generated_screen_id, sort_order) [name: 'idx_generated_organisms_screen_order']
  }

  Note: '''
    CHECK edit_status in (none, draft, published)
    CHECK review_status is null or in (pending, passed, failed, needs_regeneration)
  '''
}

Ref: screen_sources.project_id > projects.id [delete: cascade]
Ref: organism_sources.project_id > projects.id [delete: cascade]
Ref: screen_source_organisms.project_id > projects.id [delete: cascade]
Ref: screen_source_organisms.screen_source_id > screen_sources.id [delete: cascade]
Ref: screen_source_organisms.organism_source_id > organism_sources.id [delete: set null]
Ref: screen_generation_jobs.project_id > projects.id [delete: cascade]
Ref: screen_generation_jobs.screen_source_id > screen_sources.id [delete: cascade]
Ref: generated_screen_sets.job_id > screen_generation_jobs.id [delete: cascade]
Ref: generated_screen_sets.parent_set_id > generated_screen_sets.id [delete: set null]
Ref: generated_screens.set_id > generated_screen_sets.id [delete: cascade]
Ref: generated_organisms.generated_screen_id > generated_screens.id [delete: cascade]
Ref: generated_organisms.screen_source_organism_id > screen_source_organisms.id [delete: set null]
Ref: generated_organisms.organism_source_id > organism_sources.id [delete: set null]
Ref: screen_generation_jobs.latest_set_id > generated_screen_sets.id [delete: set null]
